--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "markdown-it-table-of-contents": "0.6.0",
     "markdownlint-cli": "0.41.0"
   },
-  "packageManager": "pnpm@9.7.1"
+  "packageManager": "pnpm@9.7.1",
+  "dependencies": {
+    "@11ty/eleventy-plugin-webc": "^0.11.2"
+  }
 }
